--- a/src/main/resources/templates/newuser.html
+++ b/src/main/resources/templates/newuser.html
@@ -4,22 +4,21 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Add new user</title>
+    <title>Создание</title>
 </head>
 
 <body>
 
-<h1>Add new user</h1>
+<h1>Добавить нового пользователя</h1>
 
 <form th:action="@{/newuser}" th:object="${user}" th:method="post">
-    <p>First name: <input type="text" th:field="*{firstName}"/></p>
-    <p>Last name: <input type="text" th:field="*{lastName}"/></p>
-    <p>Age: <input type="number" th:field="*{age}"/></p>
-    <p>Phone: <input type="number" th:field="*{phone}"/></p>
-    <p><input type="submit" value="Add User"/></p>
+    <p>Имя: <input type="text" th:field="*{name}"/></p>
+    <p>Фамилия: <input type="text" th:field="*{surname}"/></p>
+    <p>Возраст: <input type="number" th:field="*{age}"/></p>
+    <p><input type="submit" value="Добавить пользователя"/></p>
 </form>
 
-<a th:href="@{/users}">Return</a>
+<a th:href="@{/users}">Назад</a>
 
 </body>
 </html>
