--- a/src/main/resources/templates/userslist.html
+++ b/src/main/resources/templates/userslist.html
@@ -2,39 +2,39 @@
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
-    <title>All users</title>
+    <title>Все пользователи</title>
 </head>
 <body>
 
-<h1>All users</h1>
+<h1>Все пользователи</h1>
 
 <table border="3px" cellpadding="2" cellspacing="">
     <thead>
     <tr>
-        <th>id</th>
-        <th>first name</th>
-        <th>last name</th>
-        <th>age</th>
-        <th>phone</th>
-        <th>actions</th>
+        <th>Идентификатор</th>
+        <th>Имя</th>
+        <th>Фамилия</th>
+        <th>Возраст</th>
+        <th>Действия</th>
     </tr>
     </thead>
     <tbody>
     <tr th:each="user : ${users}">
 
-        <td th:text="${user.id}">id</td>
-        <td th:text="${user.firstName}">first name</td>
-        <td th:text="${user.lastName}">last name</td>
-        <td th:text="${user.age}">age</td>
-        <td th:text="${user.phone}">phone</td>
+        <td th:text="${user.id}">Идентификатор</td>
+        <td th:text="${user.name}">Имя</td>
+        <td th:text="${user.surname}">Фамилия</td>
+        <td th:text="${user.age}">Возраст</td>
         <td>
-            <a th:href="@{'edit/' + ${user.id}}">edit</a>
-            <a th:href="@{'delete/' + ${user.id}}">delete</a>
+            <a th:href="@{'edit?id=' + ${user.id}}">Редактировать</a>
+            <a th:href="@{'delete?id=' + ${user.id}}">Удалить</a>
         </td>
     </tr>
     </tbody>
 </table>
 
-<a th:href="@{/newuser}">Add User</a>
+<br>
+<a th:href="@{/newuser}">Добавить нового пользователя</a>
+
 </body>
 </html>
